--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-prebuilt": "^1.2.0"
   },
   "dependencies": {
-    "async": "~2.0.0-rc.6"
+    "async": "~2.0.0-rc.6",
+    "jquery": "~3.0.0"
   }
 }
